tests/bad/typed_literals.ae
/// fail: Invalid type

def main() {
    let x = 125u128
}